--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,68 @@
-__pycache__
+
+*.env
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# --- Python / Backend ---
+**/__pycache__/
+*.py[cod]
+*$py.class
+*.so
+**/.venv/
+**/venv/
+**/env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Environment Variables
 .env
+*.env
+.env.*
+
+# Testing
+.coverage
+.tox/
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# Backend Data
+backend/data/
+
+# --- Node / Frontend ---
+**/node_modules/
+frontend/dist/
+frontend/build/
+frontend/coverage/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.eslintcache
+
+# --- Docker ---
+.dockerignore
+
+# --- OS ---
+.AppleDouble
+.LSOverride
+Icon
+AGENTS.md
+PLAN.md
