chore: optimize Dockerfiles for production
Backend Dockerfile:
- Multi-stage build with python:3.12-slim base
- Non-root user (appuser) for security
- Health check endpoint support
- Cloud Run compatible (PORT=8080)
- UV_COMPILE_BYTECODE=1 for faster cold starts
- Proper dependency caching

Frontend Dockerfile:
- Multi-stage build (node:20-slim -> nginx:alpine)
- Non-root user for security
- Custom nginx config with /health endpoint
- Security headers (X-Frame-Options, X-Content-Type-Options)
- Cloud Run compatible (PORT=8080)
- Build arg for VITE_API_URL

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,28 +1,89 @@
+# Multi-stage Dockerfile for Frontend Service
+# Optimized for Cloud Run deployment
+
 # Stage 1: Build the application
 FROM node:20-slim AS builder
 
 WORKDIR /app
 
-# Copy package.json and package-lock.json first to cache dependencies
+# Copy package files first for better caching
 COPY package*.json ./
 
 # Install dependencies
-RUN npm ci
+RUN npm ci --only=production=false
 
 # Copy the rest of the application code
 COPY . .
 
+# Build argument for API URL (set at build time)
+ARG VITE_API_URL=http://localhost:8080
+ENV VITE_API_URL=$VITE_API_URL
+
 # Build the application
 RUN npm run build
 
-# Stage 2: Serve the application with Nginx
+# Stage 2: Serve with Nginx
 FROM nginx:alpine
+
+# Install curl for health checks
+RUN apk add --no-cache curl
+
+# Create non-root user
+RUN adduser -D -s /bin/sh appuser
+
+# Copy custom nginx configuration
+COPY <<EOF /etc/nginx/conf.d/default.conf
+server {
+    listen 8080;
+    server_name localhost;
+
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # Health check endpoint
+    location /health {
+        access_log off;
+        return 200 'healthy';
+        add_header Content-Type text/plain;
+    }
+
+    # SPA routing - serve index.html for all routes
+    location / {
+        try_files \$uri \$uri/ /index.html;
+    }
+
+    # Cache static assets
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+}
+EOF
 
 # Copy the built assets from the builder stage
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-# Expose port 80
-EXPOSE 80
+# Set proper ownership
+RUN chown -R appuser:appuser /usr/share/nginx/html && \
+    chown -R appuser:appuser /var/cache/nginx && \
+    chown -R appuser:appuser /var/log/nginx && \
+    touch /var/run/nginx.pid && \
+    chown -R appuser:appuser /var/run/nginx.pid
+
+# Switch to non-root user
+USER appuser
+
+# Expose port 8080 (Cloud Run default)
+EXPOSE 8080
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:8080/health || exit 1
 
 # Start Nginx
 CMD ["nginx", "-g", "daemon off;"]
