Add --platform linux/amd64 to Docker builds
Ensures images built on ARM Macs are compatible with Cloud Run

--- a/.github/workflows/cd-deploy.yml
+++ b/.github/workflows/cd-deploy.yml
@@ -41,7 +41,7 @@ jobs:
         id: build-backend
         run: |
           IMAGE_TAG="${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/backend:${{ github.sha }}"
-          docker build -t $IMAGE_TAG ./backend
+          docker build --platform linux/amd64 -t $IMAGE_TAG ./backend
           docker push $IMAGE_TAG
           echo "image=$IMAGE_TAG" >> $GITHUB_OUTPUT
 
@@ -102,6 +102,7 @@ jobs:
         run: |
           IMAGE_TAG="${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/frontend:${{ github.sha }}"
           docker build \
+            --platform linux/amd64 \
             --build-arg VITE_API_URL=${{ needs.build-and-deploy-backend.outputs.backend_url }} \
             -t $IMAGE_TAG \
             ./frontend
