Add nginx reverse proxy for backend API calls
- Frontend now calls /api/* which nginx proxies to BACKEND_URL
- Uses envsubst to inject BACKEND_URL at runtime (only substitutes
  $BACKEND_URL, preserving nginx variables like $uri)
- Added long timeouts (300s) for LLM processing
- Added 50MB upload limit for document uploads
- Config kept inline in Dockerfile for simplicity

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
 # Multi-stage Dockerfile for Frontend Service
-# Optimized for Cloud Run deployment
+# Optimized for Cloud Run deployment with backend proxy
 
 # Stage 1: Build the application
 FROM node:20-slim AS builder
@@ -15,24 +15,24 @@ RUN npm ci --only=production=false
 # Copy the rest of the application code
 COPY . .
 
-# Build argument for API URL (set at build time)
-ARG VITE_API_URL=http://localhost:8080
-ENV VITE_API_URL=$VITE_API_URL
+# Build with API pointing to /api (proxied through nginx)
+# This ensures frontend talks to its own nginx which proxies to backend
+ENV VITE_API_URL=/api
 
 # Build the application
 RUN npm run build
 
-# Stage 2: Serve with Nginx
+# Stage 2: Serve with Nginx (with backend proxy)
 FROM nginx:alpine
 
-# Install curl for health checks
-RUN apk add --no-cache curl
+# Install curl for health checks and gettext for envsubst
+RUN apk add --no-cache curl gettext
 
 # Create non-root user
 RUN adduser -D -s /bin/sh appuser
 
-# Copy custom nginx configuration
-COPY <<EOF /etc/nginx/conf.d/default.conf
+# Copy nginx template to custom location (not /etc/nginx/templates to avoid default envsubst)
+COPY <<'EOF' /etc/nginx/nginx-template.conf
 server {
     listen 8080;
     server_name localhost;
@@ -47,9 +47,35 @@ server {
         add_header Content-Type text/plain;
     }
 
+    # API proxy to backend (secured via Cloud Run IAM)
+    # BACKEND_URL is injected at runtime via environment variable
+    location /api/ {
+        # Proxy to backend, stripping /api prefix
+        proxy_pass ${BACKEND_URL}/;
+
+        # Forward headers
+        proxy_set_header Host $proxy_host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
+
+        # Timeout settings for LLM processing (can take 30+ seconds)
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 300s;
+
+        # Buffer settings
+        proxy_buffering on;
+        proxy_buffer_size 16k;
+        proxy_buffers 4 32k;
+
+        # Handle large file uploads
+        client_max_body_size 50M;
+    }
+
     # SPA routing - serve index.html for all routes
     location / {
-        try_files \$uri \$uri/ /index.html;
+        try_files $uri $uri/ /index.html;
     }
 
     # Cache static assets
@@ -68,15 +94,43 @@ EOF
 # Copy the built assets from the builder stage
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-# Set proper ownership
+# Copy startup script that processes nginx template with envsubst
+# Note: We only substitute BACKEND_URL to avoid replacing nginx variables like $uri
+COPY <<'STARTUP' /docker-entrypoint.d/10-envsubst-backend.sh
+#!/bin/sh
+set -e
+
+# Default backend URL for local development
+: "${BACKEND_URL:=http://localhost:8080}"
+
+echo "=== Configuring nginx proxy ==="
+echo "BACKEND_URL=$BACKEND_URL"
+
+# Process nginx template - ONLY substitute BACKEND_URL (not nginx vars like $uri)
+envsubst '$BACKEND_URL' < /etc/nginx/nginx-template.conf > /etc/nginx/conf.d/default.conf
+
+# Show generated config for debugging
+echo "Generated nginx config:"
+cat /etc/nginx/conf.d/default.conf
+echo "=== Nginx configuration ready ==="
+STARTUP
+
+# Make startup script executable
+RUN chmod +x /docker-entrypoint.d/10-envsubst-backend.sh
+
+# Set proper ownership (must be done as root before switching user)
 RUN chown -R appuser:appuser /usr/share/nginx/html && \
     chown -R appuser:appuser /var/cache/nginx && \
     chown -R appuser:appuser /var/log/nginx && \
+    chown -R appuser:appuser /etc/nginx/conf.d && \
     touch /var/run/nginx.pid && \
     chown -R appuser:appuser /var/run/nginx.pid
 
 # Switch to non-root user
 USER appuser
+
+# Environment variable for backend URL (set at deploy time)
+ENV BACKEND_URL=http://localhost:8080
 
 # Expose port 8080 (Cloud Run default)
 EXPOSE 8080
@@ -85,5 +139,5 @@ EXPOSE 8080
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8080/health || exit 1
 
-# Start Nginx
+# Start Nginx (docker-entrypoint.d scripts run automatically)
 CMD ["nginx", "-g", "daemon off;"]
