--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "openpyxl>=3.1.5",
     "pandas>=2.3.3",
     "pdf2image>=1.17.0",
+    "prometheus-client>=0.21.0",
     "pydantic-settings>=2.12.0",
     "pypdf2>=3.0.1",
     "pytest>=9.0.2",
