--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pandas>=2.3.3",
     "pdf2image>=1.17.0",
     "prometheus-client>=0.21.0",
+    "prometheus-fastapi-instrumentator>=7.0.0",
     "pydantic-settings>=2.12.0",
     "pypdf2>=3.0.1",
     "pytest>=9.0.2",
